Fixed link. Also added spacing to desktop view for contact links

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -190,7 +190,7 @@ footer .code-by-hand {
     }
 
     .content-pane {
-      width: 550px;
+      width: 600px;
       margin-left: auto;
       margin-right: auto;
     }
@@ -211,6 +211,9 @@ footer .code-by-hand {
       transition: color .3s linear;
     }
 
+    .contact-strip {
+      letter-spacing: 1.5em;
+    }
     .contact-strip a:hover {
       color: rgb(208, 27, 27);
     }
